--- a/CABASUS/Info.plist
+++ b/CABASUS/Info.plist
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -34,5 +34,11 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Para subir la fotografia a tu perfil</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Para guardar una copia de tus fotos en la libreria de tu iPhone</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>New Entry</string>
 </dict>
 </plist>
