--- a/CABASUS/packages.config
+++ b/CABASUS/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="xamarinios10" />
   <package id="Xamarin.iOS.iCarousel" version="1.8.4" targetFramework="xamarinios10" />
 </packages>
