--- a/CABASUS/packages.config
+++ b/CABASUS/packages.config
@@ -1,5 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="xamarinios10" />
+  <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.3.0" targetFramework="xamarinios10" />
+  <package id="System.IO" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Serialization.Xml" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Claims" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Threading" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Xamarin.iOS.iCarousel" version="1.8.4" targetFramework="xamarinios10" />
 </packages>
