--- a/CABASUS/packages.config
+++ b/CABASUS/packages.config
@@ -53,5 +53,9 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="xamarinios10" />
+  <package id="Xamarin.Build.Download" version="0.4.11" targetFramework="xamarinios10" />
+  <package id="Xamarin.Firebase.iOS.CloudMessaging" version="3.1.2" targetFramework="xamarinios10" />
+  <package id="Xamarin.Firebase.iOS.Core" version="5.1.3" targetFramework="xamarinios10" />
+  <package id="Xamarin.Firebase.iOS.InstanceID" version="3.2.1" targetFramework="xamarinios10" />
   <package id="Xamarin.iOS.iCarousel" version="1.8.4" targetFramework="xamarinios10" />
 </packages>
