--- a/CABASUS/CABASUS.csproj
+++ b/CABASUS/CABASUS.csproj
@@ -178,6 +178,10 @@
     <Compile Include="Modelos\usuarios.cs" />
     <Compile Include="ShareInSide.cs" />
     <Compile Include="Modelos\tokens.cs" />
+    <Compile Include="Controllers\Register_Horse_ViewController.cs" />
+    <Compile Include="Controllers\Register_Horse_ViewController.designer.cs">
+      <DependentUpon>Register_Horse_ViewController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\bell_icon.png" />
