--- a/CABASUS/CABASUS.csproj
+++ b/CABASUS/CABASUS.csproj
@@ -170,6 +170,7 @@
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
     <InterfaceDefinition Include="Main.storyboard" />
+    <InterfaceDefinition Include="Resources\Controllers\Settings_ViewController.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -237,6 +238,11 @@
     <Compile Include="Adapters\Gender_Adapter.cs" />
     <Compile Include="Adapters\Horses_Adapter.cs" />
     <Compile Include="Adapters\Horses_Adapter_Delegate.cs" />
+    <Compile Include="Controllers\Settings_ViewController.cs" />
+    <Compile Include="Controllers\Settings_ViewController.designer.cs">
+      <DependentUpon>Settings_ViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Adapters\Settings_Adapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\lupa_icon.png" />
