--- a/CABASUS/CABASUS.csproj
+++ b/CABASUS/CABASUS.csproj
@@ -160,6 +160,8 @@
     <ImageAsset Include="Resources\Assets.xcassets\menu.imageset\vector_menu.pdf" />
     <ImageAsset Include="Resources\Assets.xcassets\timeline.imageset\Contents.json" />
     <ImageAsset Include="Resources\Assets.xcassets\timeline.imageset\vector_timeline.pdf" />
+    <ImageAsset Include="Resources\Assets.xcassets\anadir.imageset\Contents.json" />
+    <ImageAsset Include="Resources\Assets.xcassets\anadir.imageset\anadir.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
@@ -249,6 +251,7 @@
     <BundleResource Include="Resources\cabasuslogo.png" />
     <BundleResource Include="GoogleService-Info.plist" />
     <BundleResource Include="Resources\RazasGender.db" />
+    <BundleResource Include="Resources\anadir.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="VideoLogin.mp4" />
